# inmoov_urdf

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
.github/workflows/: ci.yml  release.yml
InMoov/: InMoov.pdf.gv
InMoov-IsaacSim/urdf/: InMoov.urdf
InMoov/3dmodel/: robot_description.urdf.xacro
InMoov/meshes/dae/: G-__564753.005.dae  G-__564753.007.dae  G-__564753.009.dae  G-__564753.011.dae  G-__564753.013.dae  G-__564753.dae  G-__566220.009.dae  G-__566220.013.dae  G-__566220.dae  Texture.002.dae  Texture.003.dae  Texture.005.dae  Texture.015.dae  Texture.019.dae  Texture.028.dae  Texture.046.dae  Texture.060.dae  Texture.071.dae  Texture.085.dae  Texture.092.dae  Texture.095.dae  Texture.101.dae  Texture.102.dae  Texture.114.dae  Texture.117.dae  Texture.128.dae  Texture.131.dae  Texture.134.dae  Texture.139.dae  Texture.140.dae  Texture.142.dae  Texture.148.dae  Texture.174.dae  Texture.177.dae  Texture.178.dae  Texture.182.dae  Texture.185.dae  Texture.210.dae  Texture.214.dae  Texture.217.dae  (+7 more)
InMoov/meshes/stl/: G-__564753.004.stl  G-__564753.008.stl  G-__564753.009.stl  G-__564753.019.stl  Texture.005.stl  Texture.014.stl  Texture.024.stl  Texture.032.stl  Texture.034.stl  Texture.046.stl  Texture.055.stl  Texture.067.stl  Texture.072.stl  Texture.074.stl  Texture.079.stl  Texture.086.stl  Texture.088.stl  Texture.104.stl  Texture.106.stl  Texture.109.stl  Texture.111.stl  Texture.126.stl  Texture.127.stl  Texture.134.stl  Texture.137.stl  Texture.148.stl  Texture.170.stl  Texture.202.stl  Texture.203.stl  Texture.211.stl  Texture.241.stl  Texture.243.stl  Texture.247.stl  Texture.253.stl  Texture.256.stl  Texture.258.stl  Texture.264.stl
InMoov/robot_description/meshes/dae/: G-__564753.010.dae  G-__564753.015.dae  G-__564753.018.dae  G-__566220.016.dae  Texture.012.dae  Texture.018.dae  Texture.020.dae  Texture.068.dae  Texture.069.dae  Texture.073.dae  Texture.087.dae  Texture.104.dae  Texture.107.dae  Texture.109.dae  Texture.113.dae  Texture.122.dae  Texture.124.dae  Texture.138.dae  Texture.154.dae  Texture.157.dae  Texture.159.dae  Texture.166.dae  Texture.169.dae  Texture.172.dae  Texture.190.dae  Texture.193.dae  Texture.194.dae  Texture.218.dae  Texture.219.dae  Texture.238.dae  Texture.241.dae  Texture.252.dae  Texture.259.dae  Texture.261.dae  Texture.265.dae
InMoov/robot_description/meshes/stl/: G-__564753.002.stl  G-__564753.007.stl  G-__564753.013.stl  G-__564753.015.stl  G-__564753.016.stl  G-__564753.020.stl  G-__564753.stl  G-__566220.001.stl  G-__566220.002.stl  G-__566220.006.stl  G-__566220.007.stl  G-__566220.012.stl  G-__566220.017.stl  G-__566220.stl  Texture.002.stl  Texture.003.stl  Texture.008.stl  Texture.020.stl  Texture.022.stl  Texture.023.stl  Texture.029.stl  Texture.033.stl  (+73 more)
InMoov/robot_description/urdf/: InMoov.urdf  robot_description.urdf.xacro
InMoov/ros2_control/: inmoov_ros2_control.xacro
InMoov/urdf/: InMoov.urdf.xacro
config/: control.launch.yaml  controllers.yaml  gazebo_bridge.yaml  inmoov_rviz.rviz
config/hardware/: README.md  active.yaml  active_meta.yaml
config/hardware/configs/: default.yaml  sim_torso_stom.yaml  thais_10_05_2026.yaml
description/gazebo/: gazebo.xacro  gazebo_bridge.yaml  inmoov_gazebo_physics.xacro
description/robot_description/urdf/: properties.xacro  robot_description.urdf.xacro
description/ros2_control/: inmoov_gazebo.xacro  inmoov_gz_ros2_control.xacro  inmoov_ros2_control.xacro
description/urdf/: inmoov.urdf  inmoov.urdf.xacro
doc/: DEVELOPER.md
docs/: DEVELOPER.md  hardware_mapping.md  inmoov_i2.md  joint_calibration.md  mock.md
hardware_config/: inmoov_actuators_config.xacro  inmoov_actuators_config_ros2_control.xacro  inmoov_hardware_config.xacro  inmoov_sensors_config.xacro  test.xacro
inmoov/3dmodel/: robot_description.urdf.xacro
inmoov/meshes/dae/: G-__564753.002.dae  G-__564753.004.dae  G-__564753.014.dae  G-__564753.020.dae  G-__566220.004.dae  G-__566220.005.dae  G-__566220.007.dae  G-__566220.010.dae  G-__566220.017.dae  Texture.001.dae  Texture.006.dae  Texture.011.dae  Texture.014.dae  Texture.022.dae  Texture.027.dae  Texture.033.dae  Texture.040.dae  Texture.049.dae  Texture.053.dae  Texture.059.dae  Texture.065.dae  Texture.070.dae  Texture.075.dae  Texture.079.dae  Texture.090.dae  Texture.096.dae  Texture.100.dae  Texture.106.dae  Texture.111.dae  Texture.116.dae  Texture.118.dae  Texture.123.dae  Texture.126.dae  Texture.135.dae  Texture.137.dae  Texture.141.dae  Texture.146.dae  Texture.153.dae  Texture.155.dae  Texture.158.dae  (+36 more)
inmoov/meshes/stl/: G-__564753.001.stl  G-__564753.003.stl  G-__564753.005.stl  G-__564753.006.stl  G-__564753.010.stl  G-__564753.011.stl  G-__564753.012.stl  G-__564753.014.stl  G-__564753.017.stl  G-__564753.018.stl  G-__566220.003.stl  G-__566220.004.stl  G-__566220.005.stl  G-__566220.008.stl  G-__566220.009.stl  G-__566220.010.stl  G-__566220.011.stl  G-__566220.013.stl  G-__566220.014.stl  G-__566220.015.stl  G-__566220.016.stl  G-__566220.018.stl  G-__566220.019.stl  Texture.001.stl  Texture.004.stl  Texture.006.stl  Texture.007.stl  Texture.011.stl  Texture.012.stl  Texture.013.stl  Texture.015.stl  Texture.018.stl  Texture.019.stl  Texture.027.stl  Texture.028.stl  Texture.035.stl  Texture.037.stl  Texture.039.stl  Texture.041.stl  Texture.048.stl  (+118 more)
inmoov/ros2_control/: inmoov_gazebo.xacro  inmoov_ros2_control.xacro
inmoov/urdf/: inmoov.urdf.xacro
launch/: control.launch.py  gazebo.launch.py  joint_preview.launch.py  rviz.launch.py  rviz_standalone.launch.py
plugins/: CMakeLists.txt  MockSensor.cpp  MockSensor.hpp  OUPressureSensor.hpp
scripts/: autocalibrate_joint_limits.py  inject_collisions.py  requirements.txt  scale_xacro_origins.py
test/: test_collisions_present.py  test_hardware_config.py  test_hardware_yaml.py  test_inject_collisions.py  test_joint_limits.py  test_scale_xacro_origins.py  test_xacro_smoke.py  xacro_helper.py
test/fixtures/: invalid_duplicate_vpin.yaml  invalid_missing_board.yaml  invalid_servo_default_out_of_range.yaml
worlds/: default.sdf
(+140 files in other folders)
